# mac-mlx-meeting-minutes

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: pyannote-setup.md
scripts/: build_audiotee.sh
src/meeting_minutes/: __init__.py  __main__.py  audio.py  diarize.py  recorder.py  transcribe.py  transcript.py  vad.py
tests/: test_audio.py  test_cli.py  test_diarize.py  test_recorder.py  test_transcribe.py  test_transcript.py  test_vad.py
