[project]
name = "mac-mlx-meeting-minutes"
version = "0.1.0"
description = "Local macOS meeting minutes: record mic + system audio and transcribe on-device with MLX Whisper"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=2.2.6",
    "sounddevice",
]

[project.optional-dependencies]
transcribe = [
    "mlx-whisper",
    "opencc>=1.3.1",
    "silero-vad>=6.2.1",
]   # heavier; the model downloads on first transcribe
diarize = [
    "pyannote-audio>=4.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_minutes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
